--- a/website/music/templates/music/index.html
+++ b/website/music/templates/music/index.html
@@ -5,12 +5,12 @@
     <title>Album Details</title>
 </head>
 <body>
-<h1><a href="index.html">Here is all the albums</a></h1>
+<h1><a href="/music/">Here is all the albums</a></h1>
 {% if all_albums %}
     <ul>
         {% for album in all_albums %}
             <img src="{{ album.album_logo }}" height="150px" width="150px"/>
-            <li><a href="/music/{{ album.id }}/"> {{ album.album_title }}--{{ album.artist }} </a></li>
+            <li><a href="{% url 'music:detail' album.id %}"> {{ album.album_title }}--{{ album.artist }} </a></li>
         {% endfor %}
     </ul>
 {% else %}
